--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,10 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.4",
+    "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "groq-sdk": "^0.5.0",
+    "openai": "^4.56.0"
   }
 }
