--- a/client/manifest.json
+++ b/client/manifest.json
@@ -1,26 +1,25 @@
 {
-    "manifest_version": 3,
-    "name": "Lexify",
-    "description": "Correct grammar and maintain tone on any platform.",
-    "version": "1.0",
-    "permissions": ["activeTab", "scripting", "storage"],
-    "options_page": "options.html",
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "images/icon16.png",
-        "48": "images/icon48.png",
-        "128": "images/icon128.png"
-      }
-    },
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "Lexify",
+  "version": "1.0",
+  "description": "Correct selected text grammatically without changing tone and style",
+  "permissions": ["activeTab", "scripting", "storage"],
+  "host_permissions": ["<all_urls>"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_start"
+    }
+  ],
+  "icons": {
+    "48": "icon.png"
   }
-  
+}
