--- a/client/manifest.json
+++ b/client/manifest.json
@@ -3,8 +3,8 @@
   "name": "Lexify",
   "version": "1.0",
   "description": "Correct selected text grammatically without changing tone and style",
-  "permissions": ["activeTab", "scripting", "storage"],
-  "host_permissions": ["<all_urls>"],
+  "permissions": ["activeTab", "scripting", "storage", "tabs"],
+  "host_permissions": ["https://lexify.onrender.com/"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
@@ -16,7 +16,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
-      "run_at": "document_start"
+      "run_at": "document_end"
     }
   ],
   "icons": {
